--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 /data
 /videos
 /plots
-/notebooks
 /_research
 
 ################################################################################
@@ -414,3 +413,4 @@ $RECYCLE.BIN/
 
 ## Acknowledgements
 # Many thanks to `https://gitignore.io/`, written and maintained by Joe Blau, which contributed much material to this gitignore file.
+.Rproj.user
