--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,20 @@
 name = "SpaceTimeBio"
 authors = ["Jason M. Graham"]
-[compat]
-julia = "1.9.4"
-DrWatson = "2.13.0"
+
 [deps]
+Agents = "46ada45e-f475-11e8-01d0-f70cc89e6671"
+Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+DynamicalSystems = "61744808-ddfa-5f27-97ff-6e42cc95d634"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+MethodOfLines = "94925ecb-adb7-4558-8ed8-f975c56a0bf4"
+ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
+[compat]
+DrWatson = "2.13.0"
+julia = "1.9.4"
